# halotools

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  appveyor.yml  arz_abhodtest.ipynb  check_hod_conservation.py  conf.py  convert_tutorials.py  create_halotools_alpha_catalogs.py  create_official_halotools_catalogs.py  debug_param_prop.ipynb  defaults.py  examine_profile.py  ez_setup.py  halo_occupation.py  halotools_alpha_version2_processing_script.py  index.rst  make.bat  mc_functions.py  mcrotations.py  mock.py  new_model_testing.ipynb  paper.bib  paper.md  process_new_catalogs.py  profile_abz.prof  pyproject.toml  read_nbody.py  readme  requirements.txt  rotate_vector_collection.py  (+19 more)
.github/workflows/: ci_tests.yaml  ci_tests.yml  cron_tests.yaml  cron_tests.yml  draft-pdf.yml  test_py312.yml  wheels.yaml  wheels.yml
cextern/: README.rst
cextern/sinha_pair_counter/: DD  Makefile  countpairs.h  countpairs.ispc  logbins  wprp
docs/: autosummary_workaround.py  conf.py  docs_and_tutorials.rst  getting_started.rst  index.rst  install.rst  installation_troubleshooting.rst  installing_halotools_with_virtualenv.rst  overview.rst  requirements.txt  rtd-pip-requirements  whats_new.rst
docs/_static/: halotools.css
docs/cheat_sheet/: halo_phase_space_cheat_sheet.rst  index.rst  overview.rst  phase_space_models_functions.rst
docs/development/: bug_reports.rst  citing_halotools.rst  contributors.rst  index.rst  making_contributions.rst
docs/full_ref_api/: halotools_full_api.rst
docs/function_usage/: abundance_matching.rst  custom_exceptions_api.rst  empirical_model_factory_functions.rst  empirical_models_api.rst  hod_occupation_functions.rst  index.rst  mock_observables_functions.rst  phase_space_models_functions.rst  processing_simulation_data.rst  sim_manager_api.rst  utility_functions.rst
docs/getting_started/: getting_started_overview.rst  index.rst
docs/halotools/: index.rst
docs/managing_catalogs/: alternate_catalogs.rst  index.rst  overview.rst  sim_manager_api.rst  sim_manager_step_by_step.rst  supported_sim_list.rst
docs/mock_making/: mock_population.rst  models.rst  overview.rst  quickstart_guide.rst  simulations.rst
docs/mock_observations/: overview.rst  quickstart_guide.rst
docs/model_building/: models.rst  quickstart_guide.rst
docs/quickstart_and_tutorials/: getting_started_overview.rst  index.rst
docs/sim_analysis/: halo_analysis.rst  halo_catalogs.rst  merger_trees.rst  overview.rst
docs/source_notes/: convert_tutorials.py  index.rst
docs/tutorials/: convert_tutorials.py  example_tutorial.ipynb  example_tutorial.rst  index.rst  model_building_tutorial.ipynb  model_building_tutorial.rst  raw_halocats.ipynb  raw_halocats.rst  using_halocat_binaries.ipynb  using_halocat_binaries.rst
docs/whats_new_history/: whats_new_0.5.rst  whats_new_0.6.rst  whats_new_0.7.rst  whats_new_v0.8.rst  whats_new_v0x_history.rst
halotools/: __init__.py  _astropy_init.py  configuration.py  conftest.py  custom_exceptions.py  cython_config.py  defaults.py  gal_prof_components.py  gal_prof_factory.py  halo_occupation.py  halo_prof_components.py  halo_prof_param_components.py  halo_profile_components.py  halo_profiles.py  halotools_exceptions.py  hod_components.py  hod_decorators.py  hod_designer.py  hod_factory.py  jeans.py  make_mocks.py  mock.py  mock_factory.py  observables.py  occupation_helpers.py  preloaded_hod_models.py  profile_components.py  profile_factory.py  read_nbody.py  run_mock_instance.py  smhm.py  test_HOD_mocks.py
halotools/cf_yao/: CorrelationFunction.py
halotools/correlation_functions/: alignment_helpers.py  ed_3d.py  ed_3d_one_two_halo_decomp.py  ed_projected.py  ee_3d.py  ee_3d_one_two_halo_decomp.py  ee_projected.py  gi_minus_3d.py  gi_minus_projected.py  gi_plus_3d.py  gi_plus_projected.py  ii_minus_3d.py  ii_minus_projected.py  ii_plus_3d.py  ii_plus_projected.py
halotools/cosmology/: Concentration.py  ConcentrationDemo.py  Cosmology.py  CosmologyDemo.py  HaloConcentration.py  HaloConcentrationDemo.py  HaloDensityProfile.py  HaloDensityProfileDemo.py  Utilities.py
halotools/data/: README.rst
halotools/empirical_models/: __init__.py  abhod_components.py  abunmatch.py  alt_hod_components.py  alt_hod_factory.py  alt_hod_model_factory.py  alt_mock_factories.py  alt_mock_factory.py  assembias.py  assembias_decorator.py  conc_mass_models.py  conditional_abunmatch.py  config_space_components.py  gal_prof_components.py  gal_prof_factory.py  halo_occupation.py  halo_prof_components.py  halo_prof_param_components.py  hod_components.py  hod_designer.py  hod_factory.py  make_mocks.py  mock_factories.py  mock_factory.py  mock_helpers.py  model_defaults.py  model_factories.py  model_helpers.py  monte_carlo_phase_space.py  occupation_helpers.py  phase_space_metaclasses.py  phase_space_models.py  preloaded_hod_blueprints.py  preloaded_hod_models.py  preloaded_models.py  preloaded_subhalo_model_blueprints.py  profile_helpers.py  profile_models.py  sfr_components.py  smhm_components.py  (+3 more)
halotools/mock_observables/: __init__.py  angular_tpcf.py  catalog_analysis_helpers.py  clustering.py  clustering_helpers.py  cpairs.pyx  delta_sigma.py  distances.py  double_tree_clustering.py  error_estimation_tools.py  groups.py  isolation_criteria.py  readme  (+31 more)
licenses/: LICENSE.rst  README.rst
packagename/: defaults.py  halo_occupation.py  read_nbody.py  test_HOD_mocks.py
rotations/: README.md  __init__.py  mcrotations.py  rotate_vector_collection.py  rotations3d.py
scripts/: README.rst  convert_documentation_tutorials.py  convert_tutorials.py  create_halotools_alpha_catalogs.py  download_additional_halocat.py  download_alternate_halocats.py  download_initial_halocat  download_initial_halocat.py  read_rockstar_hlist_and_store_in_cache.py  rebuild_halo_table_cache_log.py  rebuild_ptcl_table_cache_log.py  sim_manager_script.py
tests/: test_2d.py  test_3d.py  test_hod_mocks.py  test_mcrotations.py  test_rotate_vector_collection.py  test_utilities.py
(+1141 files in other folders)
