[tool.astropy-bot]

[tool.astropy-bot.changelog_checker]
filename = "CHANGES.rst"


[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "oldest-supported-numpy",
            "cython==0.29.32"]
build-backend = 'setuptools.build_meta'
