[metadata]
name = halotools
author = Andrew Hearin
author_email = ahearin@anl.gov
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = http://astropy.org/
description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = astropy/halotools

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy numpy scipy requests beautifulsoup4 cython

[options.extras_require]
all =
    h5py
test =
    pytest-astropy
docs =
    sphinx-astropy
    matplotlib

[options.package_data]
halotools =
    data/*
    utils/tests/data/*
    sim_manager/tests/data/*

[tool:pytest]
testpaths = "halotools"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-ignore-import-errors
minversion = 6.0
norecursedirs = build docs/_build
markers =
    slow
    installation_test

[coverage:run]
omit =
    halotools/_astropy_init*
    halotools/conftest.py
    halotools/*setup_package*
    halotools/tests/*
    halotools/*/tests/*
    halotools/extern/*
    halotools/version*
    */halotools/_astropy_init*
    */halotools/conftest.py
    */halotools/*setup_package*
    */halotools/tests/*
    */halotools/*/tests/*
    */halotools/extern/*
    */halotools/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
