[metadata]
name = halotools
author = Andrew Hearin
author_email = ahearin@anl.gov
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = http://astropy.org
description = Package designed to analyze N-body simulations and constrain models of cosmology and galaxy evolution.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/halotools

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy<2
    scipy
    requests
    beautifulsoup4
    cython
    h5py

[options.extras_require]
all =
    h5py
test =
    pytest-astropy
    h5py
docs =
    sphinx-astropy

[tool:pytest]
testpaths = "halotools" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
markers =
    slow
    installation_test

